--- a/demo/style.css
+++ b/demo/style.css
@@ -1,49 +1,26 @@
 body {
   margin: 0;
   min-width: 320px;
+  font-family: sans-serif;
 }
 
-
-.grid {
-  box-shadow: 0 0 0 1px inset;
-  background-color: #ccc;
-  max-width: 960px;
-  margin: auto;
+* {
+  box-sizing: border-box;
 }
 
-/*@media (max-width: 1041px) {*/
-/*  .grid {*/
-/*    max-width: 960px;*/
-/*  }*/
-/*}*/
-/**/
-/*@media (max-width: 961px) {*/
-/*  .grid {*/
-/*    max-width: 640px;*/
-/*  }*/
-/*}*/
-/**/
-/*@media (max-width: 641px) {*/
-/*  .grid {*/
-/*    max-width: 400px;*/
-/*  }*/
-/*}*/
-
-.row {
-  box-shadow: 0 0 0 1px inset;
-  background-color: #aaa;
+img {
+  font-size: 0;
 }
 
-.column {
-  min-height: 100px;
-  box-shadow: 0 0 0 1px inset;
-  background-clip: content-box;
-  background-color: #eee;
+header {
+  background: #eee;
 }
-
-h4 {
-  flex: 0 0 100%;
-  width: 100%;
-  margin: 0;
-  padding: 10px 0;
+footer {
+  background: #eee;
+}
+aside {
+  background: #ddd;
+}
+main {
+  background: #fff;
 }
